feat: support abstentions in ratings and fully migrate authentication to BFF session management
